--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "git-bits-dun",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -23,10 +23,14 @@
     "@angular/router": "~9.0.5",
     "@okta/jwt-verifier": "1.0.0",
     "angular-autofocus-fix": "^0.1.2",
+    "body-parser": "^1.19.0",
     "cors": "2.8.5",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-bearer-token": "2.4.0",
-    "mongoose": "5.6.7",
+    "mongodb": "^2.2.33",
+    "mongojs": "^3.1.0",
+    "mongoose": "^5.9.4",
     "ngx-autofocus-fix": "^1.0.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -52,5 +56,17 @@
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 9.0.5.",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CCCCChloe/git-bits-dun.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/CCCCChloe/git-bits-dun/issues"
+  },
+  "homepage": "https://github.com/CCCCChloe/git-bits-dun#readme"
 }
