--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongojs": "^3.1.0",
     "mongoose": "^5.9.4",
     "ngx-autofocus-fix": "^1.0.4",
+    "ngx-countdown": "^8.0.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
